dustify/configs/kube-defs/goecho-deploy.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: treimann-goecho
spec:
  template:
    metadata:
      labels:
        app: treimann-goecho
    spec:
      containers:
        - name: goecho
          image: xperimental/goecho:1.3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 32Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 3
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      dnsPolicy: ClusterFirst
