dustify/configs/kube-defs/goecho-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: treimann-goecho
  name: treimann-goecho
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: treimann-goecho
  type: ClusterIP
